@@ -285,7 +285,8 @@ xfig <- function (file = ifelse(onefile,"Rplots.fig", "Rplot%03d.fig"),
 
 pdf <- function(file = ifelse(onefile, "Rplots.pdf", "Rplot%03d.pdf"),
                 width, height, onefile, family, title, fonts, version,
-                paper, encoding, bg, fg, pointsize, pagecentre)
+                paper, encoding, bg, fg, pointsize, pagecentre, colormodel,
+                useDingbats)
 {
     ## do initialization if needed
     initPSandPDFfonts()
@@ -304,6 +305,8 @@ pdf <- function(file = ifelse(onefile, "Rplots.pdf", "Rplot%03d.pdf"),
     if(!missing(fg)) new$fg <- fg
     if(!missing(pointsize)) new$pointsize <- pointsize
     if(!missing(pagecentre)) new$pagecentre <- pagecentre
+    if(!missing(colormodel)) new$colormodel <- colormodel
+    if(!missing(useDingbats)) new$useDingbats <- useDingbats
 
     old <- check.options(new, name.opt = ".PDF.Options", envir = .PSenv)
 
@@ -352,7 +355,8 @@ pdf <- function(file = ifelse(onefile, "Rplots.pdf", "Rplot%03d.pdf"),
     .External(PDF,
               file, old$paper, old$family, old$encoding, old$bg, old$fg,
               old$width, old$height, old$pointsize, onefile, old$pagecentre,
-              old$title, old$fonts, version[1], version[2])
+              old$title, old$fonts, version[1], version[2],
+              old$colormodel, old$useDingbats)
     invisible()
 }
 
@@ -638,7 +642,9 @@ assign(".PDF.Options",
 	 bg	= "transparent",
 	 fg	= "black",
 	 pointsize  = 12,
-	 pagecentre = TRUE), envir = .PSenv)
+	 pagecentre = TRUE,
+         colormodel = "rgb",
+         useDingbats = TRUE), envir = .PSenv)
 assign(".PDF.Options.default",
        get(".PDF.Options", envir = .PSenv),
        envir = .PSenv)
