@@ -429,7 +429,8 @@ static void SaveAsPDF(pDevDesc dd, const char *fn)
 			fromDeviceHeight(toDeviceHeight(-1.0, GE_NDC, gdd),
 					 GE_INCHES, gdd),
 			((gadesc*) dd->deviceSpecific)->basefontsize,
-			1, 0, "R Graphics Output", R_NilValue, 1, 4))
+			1, 0, "R Graphics Output", R_NilValue, 1, 4, 
+			"rgb", TRUE))
 	PrivateCopyDevice(dd, ndd, "PDF");
 }
 
