@@ -48,14 +48,15 @@ SEXP R_GD_nullDevice();
 
 Rboolean
 PSDeviceDriver(pDevDesc, const char*, const char*, const char*,
-	       const char**, const char*, const char*, const char*,
+	       const char **, const char*, const char*, const char*,
 	       double, double, Rboolean, double, Rboolean, Rboolean,
 	       Rboolean, const char*, const char*, SEXP, const char*);
 
 Rboolean
 PDFDeviceDriver(pDevDesc, const char *, const char *, const char *,
-		const char**, const char *, const char *, const char *,
-		double, double, double, int, int, const char*, SEXP, int, int);
+		const char **, const char *, const char *, const char *,
+		double, double, double, int, int, const char*, SEXP, 
+		int, int, const char *, int);
 
 #ifdef WIN32
 SEXP devga(SEXP);
